feat: create annotations and person mention process
